NBBIB-389 Prevent [ reference type ] citation segments from wrapping

--- a/custom/themes/bs5_nbbib_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/bs5_nbbib_lib_unb_ca/src/scss/style.scss
@@ -819,6 +819,12 @@ html {
                 .search-result {
                   margin-top: 2rem;
                   border-bottom: 1px solid $base-200;
+                  .views-field-bibliographic-citation {
+                    .cite-type {
+                      text-wrap: nowrap;
+                      font-style: normal !important;
+                    }
+                  }
                   .views-field-collections-5 {
                     margin-top: .5rem;
                     font-size: 15px;
